Overflow fix.

--- a/src/views/App.scss
+++ b/src/views/App.scss
@@ -5,7 +5,9 @@ $root: $root;
 #{$root} {
   position: relative;
   width: 100vw;
+  max-width: 100vw;
   min-height: 100vh;
+  overflow-x: hidden;
   display: flex;
   flex-direction: column;
   transition: color $appThemeTransitionTime;
